--- a/admissions.html
+++ b/admissions.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | Admissions</title>
+    <title>KALNA POLYTECHNIC | Admissions</title>
     <!--Style Starts-->
-    <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
+    <link rel="icon" type="image/png" href="img/WBSCTE.jpeg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,26 +22,27 @@
                 <div>
                     <div class="logo-name">
                         <div class="logo">
-                            <a href="index.html" title=""><img src="img/IIITV_Logo_1x1_small.png" alt="logo"></a>
+                            <a href="index.html" title=""><img src="img/WBSCTE.jpeg" alt="logo"></a>
                         </div>
                         <div class="name">
                             <a href="index.html" title="">
-                                <h5>Indian Institute of Information Technology</h5>
-                                <h5 class="primary-color">Vadodara</h5>
+                                <h5>KALNA POLYTECHNIC</h5>
+                                <h5 class="primary-color">West Bengal</h5>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="header-links">
                     <a id="loc_icon" href="#" data-toggle="popover" title="Address"
-                       data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028"
+                       data-content="P.O.- Kalnadistrict - Burdwan Kalna Bardhaman West Bengal India 713409"
                        data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
-                    <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281"
+                    <a id="phone_icon" href="#" data-toggle="popover" title="Phone No." data-content="+91-77-97286993"
                        data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
                     <a id="email_icon" href="#" data-toggle="popover" title="Email"
-                       data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i
+                       data-content="chakrabortysourodeep16@gmail.com" data-placement="bottom"><i
                             class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
-
+                            <a href="#" data-toggle="popover" title="Website" data-content="www.kalnapolytechnic.org"
+                            data-placement="bottom"><i class="fa fa-globe fa-lg" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -64,8 +65,6 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="directors_message.html">Director's Message</a></li>
-                                    <li><a href="bog.html">Board of Governors</a></li>
                                     <li><a href="society_members.html">Society Members</a></li>
                                     <li><a href="academic_council.html">Academic Council</a></li>
                                     <li><a href="finance_committee.html">Finance Committee</a></li>
@@ -74,10 +73,6 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                            <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                            <li><a href="linkages/germi.html">GERMI</a></li>
-                                            <li><a href="linkages/tcs.html">TCS</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -87,19 +82,13 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">B.Tech</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="btech_cse.html">CSE</a></li>
-                                            <li><a href="btech_it.html">IT</a></li>
+                                            <li><a href="#!">CST</a></li>
+                                            <li><a href="#!">ETC</a></li>
+                                            <li><a href="#!">CE</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Tech</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="mtech_cse.html">CSE</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="phd.html">Ph.D</a></li>
                                     <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
                                 </ul>
                             </li>
@@ -107,16 +96,13 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="btech_admission.html">B.Tech</a></li>
-                                    <li><a href="mtech_admission.html">M.Tech</a></li>
-                                    <li><a href="phd_admission.html">Ph.D</a></li>
+                                    <li><a href="btech_admission.html">Diploma</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="faculty.html">Faculty</a></li>
-                                    <li><a href="visiting_faculty.html">Visiting Faculty</a></li>
                                     <li><a href="staff.html">Staff</a></li>
                                 </ul>
                             </li>
@@ -124,15 +110,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="faq.html">FAQs</a></li>
                                     <li><a href="student_corner.html">Student's Corner</a></li>
-                                    <li><a href="http://moodle.iiitv.ac.in" target="_blank">Moodle</a></li>
                                     <li><a href="library.html">Library</a></li>
-                                    <li><a href="invited_talks.html">Invited Talks</a></li>
                                 </ul>
                             </li>
-                            <li><a href="career.html">Career</a></li>
                             <li><a href="gallery.html">Photo Gallery</a></li>
+                            <li><a href="popupLogin page.html">Login</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
@@ -147,19 +130,10 @@
         <br/><br/>
         <div class="row">
             <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="btech_admission.html">
-                    B.Tech. Admissions
+                <a href="https://webscte.co.in/">
+                    Diploma. Admissions
                 </a>
             </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="mtech_admission.html">
-                    M.Tech. Admissions
-                </a>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <a href="phd_admission.html">
-                    PhD Admissions
-                </a>
             </div>
         </div>
     </div>
@@ -173,11 +147,12 @@
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
-            <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
+            <span class="logo"><img src="img/WBSCTE.jpeg" alt="" style="border-radius: 20px;"></span>
             <div class="row">
                 <div class="col-sm-4 address">
-                    <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College,
-                    Sector-28, Gandhinagar, Gujarat - 382028
+                    <strong>College name:</strong> Kalna Polytechnic College <br>
+                    <strong>Address : </strong>P.O.- Kalnadistrict - Burdwan Kalna
+                    Bardhaman West Bengal India 713409
                 </div>
                 <div class="col-sm-4 links">
                     <div>
@@ -192,7 +167,6 @@
                         <i class="seperator"></i>
                         <a href="rti.html">RTI</a>
                         <i class="seperator"></i>
-                        <a href="pdf/MOU.pdf">MOU</a>
                     </div>
                     <div>
                         <a href="admissions.html">Admission</a>
@@ -203,8 +177,8 @@
                     </div>
                 </div>
                 <div class="col-sm-4 footer-social">
-                    <a href="#!"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
-                    <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                    <a href="https://www.facebook.com/groups/kplovesu"><i class="fa fa-facebook" aria-hidden="true" title="Official Facebook Page"></i></a>
+                    <a href="https://github.com/Sourodeep01001"><i class="fa fa-github" aria-hidden="true"
                                                           title="Github Group"></i></a>
                     <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                     <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
