--- a/rti.html
+++ b/rti.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | RTI</title>
+    <title>KALNA POLYTECHNIC | RTI</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/WBSCTE.jpeg">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -60,20 +60,13 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="directors_message.html">Director's Message</a></li>
-                                        <li><a href="bog.html">Board of Governors</a></li>
                                         <li><a href="society_members.html">Society Members</a></li>
                                         <li><a href="academic_council.html">Academic Council</a></li>
                                         <li><a href="finance_committee.html">Finance Committee</a></li>
                                         <li class="active"><a href="rti.html">RTI</a></li>
-                                        <li><a href="pdf/MOU.pdf">MOU</a></li>
                                         <li class="dropdown-submenu">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="linkages/da-iict.html">DA-IICT</a></li>
-                                                <li><a href="linkages/gsfc.html">GSFC</a></li>
-                                                <li><a href="linkages/germi.html">GERMI</a></li>
-                                                <li><a href="linkages/tcs.html">TCS</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -82,19 +75,13 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Academics <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">B.Tech</a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Diploma</a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="btech_cse.html">CSE</a></li>
-                                                <li><a href="btech_it.html">IT</a></li>
+                                                <li><a href="#!">CST</a></li>
+                                                <li><a href="#!">ETC</a></li>
+                                                <li><a href="#!">CE</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">M.Tech</a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="mtech_cse.html">CSE</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="phd.html">Ph.D</a></li>
                                         <li><a href="pdf/academic_calendar_autumn_2015_16.pdf">Academic Calender</a></li>
                                         
                                     </ul>
@@ -102,30 +89,23 @@
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admission <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="btech_admission.html">B.Tech</a></li>
-                                        <li><a href="mtech_admission.html">M.Tech</a></li>
-                                        <li><a href="phd_admission.html">Ph.D</a></li>
+                                        <li><a href="https://webscte.co.in/">Diploma</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">People <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="faculty.html">Faculty</a></li>
-                                        <li><a href="visiting_faculty.html">Visiting Faculty</a></li>
                                         <li><a href="staff.html">Staff</a></li>
                                     </ul>
                                 </li>
                                 <li>
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
-                                        <li><a href="faq.html">FAQs</a></li>
                                         <li><a href="student_corner.html">Student's Corner</a></li>
-                                        <li><a href="http://moodle.iiitv.ac.in" target="_blank">Moodle</a></li>
                                         <li><a href="library.html">Library</a></li>
-                                        <li><a href="invited_talks.html">Invited Talks</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="career.html">Career</a></li>
                                 <li><a href="gallery.html">Photo Gallery</a></li>
                                 <li><a href="popupLogin page.html">Login</a></li>
                             </ul>
@@ -166,7 +146,6 @@
                             <i class="seperator"></i>
                             <a href="rti.html">RTI</a>
                             <i class="seperator"></i>
-                            <a href="pdf/MOU.pdf">MOU</a>
                         </div>
                         <div>
                             <a href="admissions.html">Admission</a>
